--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,11 @@
 		    <artifactId>hibernate-core</artifactId>
 		    <version>5.2.8.Final</version>
 		</dependency>
-				
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+             <version>2.4.1</version>
+        </dependency>
 		<dependency>
 			<groupId>com.ptit</groupId>
 			<artifactId>data-stream</artifactId>
