--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,6 @@
 </listener>
 
 <welcome-file-list>
-	<welcome-file></welcome-file>
+	<welcome-file>index.jsp</welcome-file>
 </welcome-file-list>
 </web-app>
